--- a/core/app/views/layouts/spree_application.html.erb
+++ b/core/app/views/layouts/spree_application.html.erb
@@ -5,15 +5,18 @@
   </head>
   <body class="<%= body_class %>" id="<%= @body_id || 'default' %>" data-hook="body">
     <div id="header" data-hook>
-      <ul id="nav-bar" data-hook>
-        <%= render 'shared/nav_bar' %>
-      </ul>
-      <div id="logo" data-hook>
-        <%= logo %>
-      </div>
-    </div>
+			<div class="container">
+      	<ul id="nav-bar" data-hook>
+        	<%= render 'shared/nav_bar' %>
+	      </ul>
+  	    <div id="logo" data-hook>
+    	    <%= logo %>
+      	</div>
+    	</div>
+		</div>
 
     <div id="wrapper" data-hook>
+		<div class="container">
       <% if content_for?(:sidebar) %>
         <div id="sidebar" data-hook>
           <%= yield :sidebar %>
@@ -25,6 +28,7 @@
         <%= flash_messages %>
         <%= yield %>
       </div>
+		</div>
     </div>
     
     <div id="footer" data-hook>
